--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.13.0",
+    "@blueprintjs/icons": "^3.6.0",
     "axios": "^0.18.0",
     "js-file-download": "^0.4.4",
     "node-fetch": "^2.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-mosaic-component": "^2.0.2",
     "react-redux": "^5.1.0",
-    "react-scripts": "2.0.5",
+    "react-scripts": "^2.1.3",
     "react-test-renderer": "^16.7.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
