--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "text-data-creation-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://lombardpress.org/expressionator",
   "dependencies": {
     "@blueprintjs/core": "^3.13.0",
     "@blueprintjs/icons": "^3.6.0",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +36,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
